refoactor code